# ai-on-a-stick

AI-On-A-Stick/: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  debug-no-response-after-load.md  debug-usb-llama-unreachable.md
AI-On-A-Stick/.dbg/: no-response-after-load.env  usb-llama-unreachable.env
AI-On-A-Stick/config/: runtime.ini
AI-On-A-Stick/data/: brain.db
AI-On-A-Stick/launch/: run-linux.sh  run-mac.sh  start-windows.bat
AI-On-A-Stick/src/: config.cpp  config.h  database.cpp  database.h  hardware.cpp  hardware.h  http_server.cpp  http_server.h  llama_runtime.cpp  llama_runtime.h  machine.cpp  machine.h  main.cpp
AI-On-A-Stick/ui/: app.js
